config/samples/tcproute/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-blixt-tcproute-sample
  labels:
    app: blixt-tcproute-sample
spec:
  selector:
    matchLabels:
      app: echo-blixt-tcproute-sample
  template:
    metadata:
      labels:
        app: echo-blixt-tcproute-sample
    spec:
      containers:
      - name: server
        image: istio/tcp-echo-server:1.1
        imagePullPolicy: IfNotPresent
        args: [ "8080", "echo-blixt-tcproute-sample" ]
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-blixt-tcproute-sample
  name: echo-blixt-tcproute-sample
spec:
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo-blixt-tcproute-sample
  type: ClusterIP
