config/samples/tcproute/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: blixt-tcproute-sample
spec:
  parentRefs:
  - name: blixt-tcproute-sample
    port: 8080
  rules:
  - backendRefs:
    - name: echo-blixt-tcproute-sample
      port: 8080
